Update template includes to fix Twig\Error\LoaderError issue and optimize .theme use namespaces

--- a/web/themes/custom/commerce_2_demo/templates/pages/page--products.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--products.html.twig
@@ -56,7 +56,7 @@
 {% set col_class = page_sidebar_rendered ? 'col-sm-9 col-md-10' : 'col-sm-12' %}
 
 {# Site Header. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_header.html.twig' %}
 {# / Site Header. #}
 
 {# Mobile sidebar. #}
@@ -118,5 +118,5 @@
 {# / Main Content. #}
 
 {# Site Footer. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_footer.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_footer.html.twig' %}
 {# / Site Footer. #}
