--- a/web/themes/custom/commerce_2_demo/templates/pages/page--front.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--front.html.twig
@@ -10,7 +10,7 @@
  */
 #}
 {# Site Header. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_header.html.twig' %}
 {# / Site Header. #}
 
 {% if homepage_carousel_view %}
@@ -46,5 +46,5 @@
 {# / Main Content. #}
 
 {# Site Footer. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_footer.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_footer.html.twig' %}
 {# / Site Footer. #}
