--- a/web/themes/custom/commerce_2_demo/templates/pages/page--product--sir-mix-a-bit.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--product--sir-mix-a-bit.html.twig
@@ -51,7 +51,7 @@
 {# / Include UH Recurring Digital library. #}
 
 {# Site Header. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_header.html.twig' %}
 {# / Site Header. #}
 
 {# Main Content. #}
@@ -97,5 +97,5 @@
 {# / Main Content. #}
 
 {# Site Footer. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_footer.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_footer.html.twig' %}
 {# / Site Footer. #}
