--- a/web/themes/custom/commerce_2_demo/templates/pages/page--type--landing-page.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--type--landing-page.html.twig
@@ -47,7 +47,7 @@
 #}
 
 {# Site Header. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_header.html.twig' %}
 {# / Site Header. #}
 
 {# Add AOS library for fancy CSS effects. #}
@@ -80,5 +80,5 @@
 {# / Main Content. #}
 
 {# Site Footer. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_footer.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_footer.html.twig' %}
 {# / Site Footer. #}
