--- a/web/themes/custom/commerce_2_demo/templates/pages/page.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page.html.twig
@@ -54,7 +54,7 @@
 {% set content_class = page_sidebar_exists ? 'content__main-content--with-sidebar' %}
 
 {# Site Header. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_header.html.twig' %}
 {# / Site Header. #}
 
 {# Main Content. #}
@@ -107,5 +107,5 @@
 {# / Main Content. #}
 
 {# Site Footer. #}
-{% include base_path ~ directory ~ '/templates/pages/includes/site_footer.html.twig' %}
+{% include '@commerce_2_demo/pages/includes/site_footer.html.twig' %}
 {# / Site Footer. #}
