--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -49,6 +49,7 @@
 @import 'pages/product_uh-axe';
 @import 'pages/product_uh-recurring-digital';
 @import 'pages/checkout';
+@import 'pages/order';
 @import 'pages/user';
 
 // Misc.
